--- a/project pemweb (2)/styles.css
+++ b/project pemweb (2)/styles.css
@@ -1,90 +1,41 @@
-body {
+
+body, html {
+    height: 100%;
     margin: 0;
-    padding: 0;
-    font-family: 'Arial', sans-serif;
-}
-
-.navbar {
-    background-color: #333;
-}
-
-.navbar-brand, .nav-link {
-    color: #fff !important;
-}
-
-.hero-section {
-    position: relative;
-    text-align: center;
+    font-family: Arial, sans-serif;
     color: white;
+    text-align: center;
+    background-color: #2c3e50;
 }
 
-.hero-section img {
-    width: 100%;
-    height: auto;
-}
-
-.hero-text {
+.background-image {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #333;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
-.hero-text h1 {
-    font-size: 3rem;
+.login-box {
+    background-color: white;
+    color: black;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.time {
+    font-size: 100px;
     font-weight: bold;
 }
 
-.hero-text p {
-    font-size: 1.5rem;
-}
-
-.btn-custom {
-    background-color: #ff4b5c;
-    color: white;
-    padding: 20px 20px;
-    border: 15px;
-    border-radius: 15px;
-    font-size: 1rem;
-    margin-top: 150px;
-}
-
-.section {
-    padding: 60px 0;
-}
-
-.section h2 {
-    text-align: center;
-    margin-bottom: 40px;
-    font-size: 2.5rem;
-    font-weight: bold;
-}
-
-.section p {
-    text-align: center;
-    font-size: 1.2rem;
+.date {
+    font-size: 20px;
     margin-bottom: 20px;
 }
 
-.footer {
-    background-color: #333;
-    color: white;
-    padding: 20px 0;
-    text-align: center;
-}
-
-.card {
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.card img {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.card-body {
-    padding: 20px;
+.moon-icon {
+    font-size: 50px;
+    margin-bottom: 20px;
 }
