--- a/project pemweb (2)/styles.css
+++ b/project pemweb (2)/styles.css
@@ -1,41 +1,115 @@
-
-body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    color: white;
-    text-align: center;
-    background-color: #2c3e50;
+body {
+	margin: 0;
+	padding: 0;
+	font-family: 'Arial', sans-serif;
 }
 
-.background-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+body:hover {
+	overflow: auto;
+}
+.container {
+	overflow: hidden;
 }
 
-.login-box {
-    background-color: white;
-    color: black;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.navbar {
+	background-color: #333;
 }
 
-.time {
-    font-size: 100px;
-    font-weight: bold;
+.navbar-brand,
+.nav-link {
+	color: #fff !important;
 }
 
-.date {
-    font-size: 20px;
-    margin-bottom: 20px;
+.hero-section {
+	position: relative;
+	text-align: center;
+	color: white;
 }
 
-.moon-icon {
-    font-size: 50px;
-    margin-bottom: 20px;
+.hero-section img {
+	width: 100%;
+	height: auto;
+}
+
+.hero-text {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: #333;
+}
+
+.hero-text h1 {
+	font-size: 3rem;
+	font-weight: bold;
+}
+
+.hero-text p {
+	font-size: 1.5rem;
+}
+
+.btn-custom {
+	background-color: #ff4b5c;
+	color: white;
+	padding: 20px 20px;
+	border: 15px;
+	border-radius: 15px;
+	font-size: 1rem;
+	margin-top: 150px;
+}
+
+.section {
+	padding: 60px 0;
+}
+
+.section h2 {
+	text-align: center;
+	margin-bottom: 40px;
+	font-size: 2.5rem;
+	font-weight: bold;
+}
+
+.section p {
+	text-align: center;
+	font-size: 1.2rem;
+	margin-bottom: 20px;
+}
+
+.footer {
+	background-color: #333;
+	color: white;
+	padding: 20px 0;
+	text-align: center;
+}
+
+.card {
+	border: none;
+	border-radius: 10px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card img {
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.card-body {
+	padding: 20px;
+}
+body::-webkit-scrollbar {
+	width: 8px; /* Lebar scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+	background: #555; /* Warna track scrollbar */
+	border-radius: 5px; /* Radius lengkung */
+}
+
+body::-webkit-scrollbar-thumb {
+	background: #888; /* Warna handle scrollbar */
+	border-radius: 5px; /* Radius lengkung */
+}
+
+body::-webkit-scrollbar-thumb:hover {
+	background: #555; /* Warna handle saat dihover */
 }
